Update Repo Name

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,7 +1,7 @@
 
 # Change these first
 owner: SamPetherbridge # Your GitHub username
-repo: status.httpstatus.xyz # Your GitHub repository name
+repo: status.statuscodes.peth.me # Your GitHub repository name
 
 # Add your sites here
 sites:
